# bio-llm-evaluation-suite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  dataset_request.md  feature_request.md
.github/workflows/: ci.yml
communications/blogs/: bio-llm-first-run.md
communications/outreach/: 2025-10-10-initial-emails.md  2025-10-15-follow-ups.md
configs/: pubmedqa.baseline.json
data/samples/: pubmedqa.sample.jsonl
docs/checklists/: bio-llm-dataset-compliance.md
docs/checklists/completed/: biolaysumm.md  multiclinsum.md  pubmedqa.md
docs/datasets/: biolaysumm.md  multiclinsum.md  pubmedqa.md
docs/designs/: README.md  bio-llm-eval.md
docs/issues/: bio-llm-baseline-pipeline.md  cognitive-kernel-pro-biomed-eval.md  dataset-backlog.md  galaxy-gpu-acceleration.md  maia-helm-deployment.md
docs/lab-reports/: 2025-10-13.md
docs/project-board/: board-structure.md  setup.md
docs/proposals/: bio-llm-full-run.md
logs/dataset-access/: README.md
reports/: README.md
src/bio_llm_eval/: __init__.py  cli.py  config.py  data.py  evaluation.py  training.py
templates/: lab-report.md
templates/outreach/: cognitive-kernel-pro.md  galaxy.md  maia.md
tests/: test_pipeline.py
tools/compliance/: README.md  phi_scan.py
